--- a/config.json
+++ b/config.json
@@ -10,12 +10,12 @@
           "blog_name":" Coding Shinobi",
           "blog_title":"CodingShinobi",
           "sub_head":" Programmers Place!",
-          "gmail-user":"codingshinobi111@gmail.com",
+          "gmail-user":"userEmail",
           "gmail-password":"oneforall100%",
           "about-text":"Hi my name is Yuvraj yadav. I live in Faridabad. Currently, I am pursuing BCA from DAV Centenary College, Faridabad. I love programming and making projects. My goal is become a successful programmer.",
           "no_of_post":2,
-          "admin_user":"codingshinobi111",
-          "admin_password":"oneforall",
+          "admin_user":"username",
+          "admin_password":"password",
           "upload_location":"C:\\Users\\yuvra\\Desktop\\coding shinobi\\static\\uploaded files"
           
         }
